--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-log/*.log
+# phpstorm project files
+.idea
+# netbeans project files
+nbproject
+
+# zend studio for eclipse project files
+.buildpath
+.project
+.settings
+
+# windows thumbnail cache
+Thumbs.db
+
+# composer vendor dir
+
+
+# Mac DS_Store Files
+.DS_Store
